Fix at least some of the problems with taking a clan snapshot, including handling players with custom titles.
git-svn-id: http://svn.code.sf.net/p/kolmafia/code@6393 b29ace70-8910-0410-8dcc-aa2fc6433167